--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/scss/bootstrap";
+@import "theme/scss/freelancer";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
