--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">StartupBuilder.INFO</a>
     <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fas fa-bars"></i>
@@ -30,7 +30,7 @@
     <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="">
 
     <!-- Masthead Heading -->
-    <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+    <h1 class="masthead-heading text-uppercase mb-0">Build your Startup Now!!!</h1>
 
     <!-- Icon Divider -->
     <div class="divider-custom divider-light">
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Masthead Subheading -->
-    <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+    <p class="masthead-subheading font-weight-light mb-0">Big Data - Cloud Native - Mobile</p>
 
   </div>
 </header>
